--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,11 @@
 
 
   <div class="banner">
-    <div class="container">
-      <h1>welcome to the inventory tracker</h1>
-      <p>begin by selecting an action above</p>
+    <div class="container d-flex justify-content-center">
+      <div class="flex-column">
+        <h1>welcome to the inventory tracker</h1>
+        <p>begin by selecting an action above</p>
+      </div>
     </div>
 
     <div class="signature">
