--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
 
 
   <div class="banner">
-    <div class="container d-flex justify-content-center">
-      <div class="flex-column">
+    <div class="container-md d-flex justify-content-left">
+      <div class="flex-column justify-content-center">
         <h1>welcome to the inventory tracker</h1>
         <p>begin by selecting an action above</p>
       </div>
