small change to resposiveness and UoM info

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -36,7 +36,7 @@
     <div class="form-group row justify-content-center">
               <%= f.input :internal_stock_id, label: "internal stock id", label_html: { class: 'label' } %>
 
-    <a data-bs-toggle="tooltip" title="value of one purchase unit">
+    <a data-bs-toggle="tooltip" title="value of one individual unit">
 
               <%= f.input :value, label: "value", label_html: { class: 'hint' } %>
     </a>
