--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -72,15 +72,16 @@
       <% end %>
   </div>
 </div>
-
     <% else %>
 
-<div class="container d-flex justify-content-start">
-  <div class="row">
-      <div class="flex-column">
-        <div class="item-category"> current on-hand: </div> <div class="item-info"> unknown </div> </br>
-        <div class="item-category"> last updated: </div> <div class="item-info"> never </div>
-        <% end %>
-      </div>
+<div class="item-show-responsive-bottom">
+  <div class="container d-flex justify-content-start">
+    <div class="row">
+        <div class="flex-column">
+          <div class="item-category"> current on-hand: </div> <div class="item-info"> unknown </div> </br>
+          <div class="item-category"> last updated: </div> <div class="item-info"> never </div>
+          <% end %>
+        </div>
+    </div>
   </div>
 </div>
