added sticky-top the the tables

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 
 <h3> all items | current inventory counts</h3>
 
-<table class="table table-hover">
+<table class="table table-hover sticky-top">
   <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
