--- a/app/views/item_cycle_counts/index.html.erb
+++ b/app/views/item_cycle_counts/index.html.erb
@@ -23,7 +23,7 @@ with the corresponding updated_at month as a value -->
 <!-- creating the table and looping through the months array
 to generate a new column for each month -->
 
-<table class="table table-hover">
+<table class="table table-hover sticky-top">
   <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
