sticky-top added to all tables

--- a/app/views/item_cycle_counts/index.html.erb
+++ b/app/views/item_cycle_counts/index.html.erb
@@ -23,8 +23,8 @@ with the corresponding updated_at month as a value -->
 <!-- creating the table and looping through the months array
 to generate a new column for each month -->
 
-<table class="table table-hover sticky-top">
-  <thead class="thead-dark">
+<table class="table table-hover">
+  <thead class="thead-dark sticky-top">
     <tr>
       <th scope="col">#</th>
       <th scope="col">Item</th>
