--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,8 +1,8 @@
 
 <h3> all items | current inventory counts</h3>
 
-<table class="table table-hover sticky-top">
-  <thead class="thead-dark">
+<table class="table table-hover">
+  <thead class="thead-dark sticky-top">
     <tr>
       <th scope="col">#</th>
       <th scope="col">Item</th>
