small meta change for site name  display on browser tab

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Inventory</title>
+    <title>Inventory Tracker</title>
     <%= favicon_link_tag  %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
