aligned some form buttons

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -41,7 +41,7 @@
               <%= f.input :value, label: "value", label_html: { class: 'hint' } %>
     </a>
     </div>
-    <div class="form-group row" style="padding-left: 160px;">
+    <div class="form-group row justify-content-center">
               <%= f.button :submit, "create item", class: "btn btn-dark" %>
     </div>
           <% end %>
