added some padding to cycle_counts_show, changed the styling on alerts and notices

--- a/app/assets/stylesheets/cycle_counts.scss
+++ b/app/assets/stylesheets/cycle_counts.scss
@@ -23,6 +23,13 @@ h3 {
   text-shadow: 1px 1px 3px rgba(0,0,0,1);
 }
 
+.remaining {
+  padding-top: 20px;
+  font-family: monospace;
+  color: white !important;
+  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+}
+
 .card {
   font-family: monospace;
   box-shadow: 1px 1px 3px rgba(0,0,0,1);
