--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -44,8 +44,8 @@ td {
 }
 
 .alert {
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+  color: black;
+  text-shadow: 1px 1px 3px #FF0000;
 }
 
 .history {
