--- a/app/views/cycle_counts/show.html.erb
+++ b/app/views/cycle_counts/show.html.erb
@@ -6,7 +6,7 @@
 <%= render "item_cycle_counts/new" %>
 
 
-<h3> remaining items: </h3>
+<h3 class="remaining"> remaining items: </h3>
 
 
 <% @all_items_array = [] %>
